--- a/app/src/main/res/layout/activity_shimer_for_detail.xml
+++ b/app/src/main/res/layout/activity_shimer_for_detail.xml
@@ -1,25 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:outlineSpotShadowColor="@color/black"
-    tools:context=".presentation.detail.DetailActivity">
-
-    <ProgressBar
-        android:id="@+id/prg_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="348dp"
-        android:visibility="gone"
-        android:foregroundGravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nstd"
         android:visibility="visible"
@@ -33,11 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.viewpager.widget.ViewPager
+            <ImageView
                 android:id="@+id/imageView"
+                android:background="@color/bg_shimer"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:src="@color/color_price_diskon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +33,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="1"
-                android:text="Seller"
+                android:background="@color/bg_shimer"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -64,7 +47,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
-                android:text="Lorem Ipsum Dolor"
+                android:background="@color/bg_shimer"
                 android:maxLines="1"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -81,9 +64,7 @@
                 android:layout_height="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:numStars="5"
-                android:progressTint="@color/rating_color"
-                android:rating="3"
+                android:background="@color/bg_shimer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_tittle" />
 
@@ -92,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="@string/rc_rating"
+                android:background="@color/bg_shimer"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                 app:layout_constraintStart_toEndOf="@+id/ratingBar"
@@ -116,7 +97,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:maxLines="1"
-                android:text="Deskripsi Produk"
+                android:background="@color/bg_shimer"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -127,11 +108,11 @@
             <TextView
                 android:id="@+id/txt_content_desc"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/ex_content_deskripsi"
+                android:background="@color/bg_shimer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_deskripsi" />
@@ -153,60 +134,12 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:maxLines="1"
-                android:text="@string/komentar"
+                android:background="@color/bg_shimer"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
-
-            <TextView
-                android:id="@+id/txt_selengkapnya"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="Lihat Selengkapnya"
-                android:textColor="@color/clr_sl"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/txt_komentar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/txt_komentar" />
-            <TextView
-                android:id="@+id/txt_lebihsedikit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:textColor="@color/clr_sl"
-                android:layout_marginEnd="16dp"
-                android:text="Lebih Sedikit"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/txt_komentar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/txt_komentar" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_komen"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:visibility="visible"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_komentar" />
-
-            <ProgressBar
-                android:id="@+id/prg_bar2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_komentar" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
